--- a/_config.yml
+++ b/_config.yml
@@ -51,10 +51,10 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : 
+  twitter          :
   vine             :
   weibo            :
-  xing             :
+  xing             : 'baidu.com'
   youtube          :
   wikipedia        :
 
