--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "images/android-chrome-512x512.png"
   bio              : "DeClaRe Lab @SUTD"  # Describe your org
   location         : "Singapore"
-  employer         :
+  employer         : "SUTD"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=J1cg8fIAAAAJ"
   email            : "smj812855@163.com"
