--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ google_scholar_stats_use_cdn : true
 google_analytics_id      : G-S19XGL9F9E # get google_analytics_id from https://analytics.google.com/analytics/
 
 # SEO Related
-google_site_verification :  # get google_site_verification from https://search.google.com/search-console/about
-bing_site_verification   :  B702AD6D88F955ED06FE914D5B604595 # get bing_site_verification from https://www.bing.com/webmasters/about
+google_site_verification : f02BSgMLAQbUF-XwR5zMTzS_B3u0RSbKqTbfcnynIpQ # get google_site_verification from https://search.google.com/search-console/about
+bing_site_verification   : B702AD6D88F955ED06FE914D5B604595 # get bing_site_verification from https://www.bing.com/webmasters/about
 baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.baidu.com/login/index?u=/site/index
 
 # Site Author
