--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Maojia Song's Homepage"
-description              : "*rr*"
+description              : "Researcher in DeClaRe Lab. Graduated from the University of Leeds. Enthusiastic about on NLP, LLM, and Adaptive Intelligence."
 repository               : "MAOJIASONG/MAOJIASONG.github.io"
 google_scholar_stats_use_cdn : true
 
@@ -21,7 +21,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Lorem ipsum"
+  name             : "Maojia Song"
   avatar           : "images/android-chrome-512x512.png"
   bio              : "DeClaRe Lab @SUTD"  # Describe your org
   location         : "Singapore"
