--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Maojia Song's Homepage"
-description              : "Researcher in DeClaRe Lab. Graduated from the University of Leeds. Enthusiastic about on NLP, LLM, and Adaptive Intelligence."
+description              : "NLP Researcher. Graduated from the University of Leeds. Enthusiastic about NLP, LLM, and Adaptive Intelligence."
 repository               : "MAOJIASONG/MAOJIASONG.github.io"
 google_scholar_stats_use_cdn : true
 
