update my career

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   employer         : # e.g., Bytedance AI Lab
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=J1cg8fIAAAAJ"
-  email            : "smj812855@163.com"
+  email            : "maojia_song@mymail.sutd.edu.sg"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
